--- a/styles/global.scss
+++ b/styles/global.scss
@@ -22,6 +22,7 @@ body {
       $background-color-third 100%
     )
     no-repeat center center fixed;
+  background-attachment: fixed;
   background-size: auto 100vh;
   background-size: auto 120lvh;
 }
